--- a/index.html
+++ b/index.html
@@ -139,6 +139,20 @@
       padding: 8px;
       margin-bottom: 10px;
     }
+    
+     #faq details {
+      margin-bottom: 15px;
+      padding: 10px;
+      background: #f5f5f5;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    #faq summary {
+      font-weight: bold;
+      font-size: 1.05rem;
+      color: #0077cc;
+    }
     @media screen and (max-width: 600px) {
       header h1 {
         font-size: 2rem;
@@ -208,6 +222,47 @@
   </div>
 </section>
 
+  <section id="faq">
+    <h2>Frequently Asked Questions</h2>
+    <details>
+      <summary><strong>What is a virtual property tour?</strong></summary>
+      <p>A virtual tour is a 360° online walkthrough of a property that allows buyers or renters to view every angle of a home from their phone or computer.</p>
+    </details>
+    <details>
+      <summary><strong>How long does it take to deliver a virtual tour?</strong></summary>
+      <p>We deliver most virtual tours within 48 hours after capturing the property.</p>
+    </details>
+    <details>
+      <summary><strong>What areas do you cover?</strong></summary>
+      <p>We currently serve all of Nairobi and Mombasa, with flexible packages available for other counties on request.</p>
+    </details>
+    <details>
+      <summary><strong>Do you offer discounts for multiple listings?</strong></summary>
+      <p>Yes, we offer discounted pricing for agents or developers showcasing 5 or more listings per month. Contact us for a custom quote.</p>
+    </details>
+    <details>
+      <summary><strong>Can buyers overseas view my listing?</strong></summary>
+      <p>Absolutely. Our virtual tours are accessible from anywhere in the world, making them ideal for reaching diaspora clients or investors.</p>
+    </details>
+    <details>
+      <summary><strong>What do I need to prepare before the shoot?</strong></summary>
+      <p>Please ensure the property is clean, well-lit, and free of clutter. We'll take care of the rest, including setup and capture.</p>
+    </details>
+  </section>
+
+  <section id="contact" class="contact">
+    <h2>Contact Us</h2>
+    <p><strong>Email:</strong> <a href="mailto:RealViewKenya@gmail.com">RealViewKenya@gmail.com</a></p>
+    <p><strong>Phone/WhatsApp:</strong> <a href="tel:+254723540566">+254 723 540 566</a></p>
+    <p><strong>Location:</strong> Nairobi, Kenya</p>
+    <div class="socials">
+      <h3>Follow Us</h3>
+      <a href="https://www.tiktok.com/@realityviewkenya" target="_blank">TikTok: @realityviewkenya</a><br>
+      <a href="https://twitter.com/RealViewKE" target="_blank">Twitter: @RealViewKE</a><br>
+      <a href="https://www.linkedin.com/company/real-view-kenya" target="_blank">LinkedIn: Real View Kenya</a>
+    </div>
+    <a href="mailto:RealViewKenya@gmail.com" class="button">Email Us</a>
+  </section>
 
     </div>
   </section>
